feat: convert blender to json/tgf/anim/obj/dmat

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Bartels"]
 	path = Bartels
 	url = https://github.com/dilevin/Bartels.git
+[submodule "fTetWild"]
+	path = fTetWild
+	url = https://github.com/wildmeshing/fTetWild.git
